fix: change List of methods to Arrays.asList
- List.of method is bew in Java 9
- So downgrade of to Arrays.asList